--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,14 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
+
+# calling any function from geometr for the first time creates an annoying
+# message about spatstat, which I can remove by calling it here without
+# including this chunk in the Rmd
+library(sf)
+library(geometr)
+nc_sf <- st_read(system.file("shape/nc.shp", package="sf"), quiet = TRUE)
+getFeatures(nc_sf)
 ```
 # geometr <a href='https://ehrmanns.github.io/geometr/'><img src='man/figures/logo.svg' align="right" height="200" /></a>
 
@@ -61,32 +69,27 @@ library(geometr)
 library(sf)
 nc_sf <- st_read(system.file("shape/nc.shp", package="sf"), quiet = TRUE)
 nc_geom <- gc_geom(input = nc_sf)
-
-# ... or by hand.
-library(tibble)
-coords <- tibble(x = c(40, 70, 70, 50),
-                 y = c(40, 40, 60, 70))
-window <- tibble(x = c(0, 80),
-                 y = c(0, 80))
-aGeom <- gs_polygon(anchor = coords, window = window)
-
-# The "tiny map" shows where the vertices are concentrated.
-nc_geom
 ```
 
 Metadata of different classes can be extracted in interoperable quality (i.e. the same metadata in different objects/classes have the same name and the same arrangement).
 
 ```{r}
 getFeatures(x = nc_sf)
+
 getFeatures(x = nc_geom)
 ```
 
 `geometr` only knows the feature types `point`, `line`, `polygon` and `grid` (a systematic lattice of points). 
 In contrast to the simple features standard, there are no  *MULTI\** features. 
-The way simple features have been implemented in R means that the same information can be stored in several different ways, which are only interoperable after a range of tests and corrections. 
-For example, a group of polygons can make up a `MULTIPOLYGON` with attributes that are valid for the overall group only.
+The way simple features have been implemented in R has the consequence that certain information can only be stored in a rather inefficient and cumbersome way. 
+Think of a set of polygons that has individual attributes at the `POLYGON` level, but also attributes at the group (`MULTIPOLYGON`) level, i.e., where all polygons of that set have the same value of the respective attributes.
+
+make up a `MULTIPOLYGON` with attributes that are valid for the overall group only.
 Likewise, the polygons could be stored at the level of individual \"closed paths\" as `POLYGON`, with specific attributes per polygon.
 Both sets of attributes can only exists either as duplicates for all group specific attributes in a `POLYGON`, or even more complicated nested attribute tables at the `MULTIPOLYGON` level.
+
+, which are only interoperable after a range of tests and corrections
+
 
 The backbone of a `geom` are three attribute tables, one for points, features and groups of features, the latter two of which can be provided with ancillary information.
 Each feature is stored as a single unit, all of which are related to other features by a group ID, which relates the features to attributes for an overall group.
@@ -96,7 +99,7 @@ Eventually this results in a tidier data-structure with easier access than `Spat
 # when using the group = TRUE argument, the attributes of MULTI*-feature are
 # stored in the group attribute table of a geom
 nc_geom <- gc_geom(input = nc_sf, group = TRUE)
-currituck <- getFeatures(x = nc_geom, gid == 4)
+currituck <- gt_filter(obj = nc_geom, gid == 4)
 
 getFeatures(x = currituck)
 getGroups(x = currituck)
@@ -108,15 +111,14 @@ newTable <- data.frame(fid = c(1:108),
 ```
 
 `geometr` comes with the `visualise` function, which makes nice-looking diagnostic spatial plots, that show explicit values whenever possible.
-For example, it does not create artificial bins for the values scale, but shows the explicit range of values.
+For example, it does not create artificial (\"nice\") bins for the x and y axis or the values values shown in the plot, but provides the range of values explicitly.
 Moreover, you can easily set plot titles without much effort.
 
 ```{r, fig.height=3}
 visualise(`North Carolina` = nc_geom)
 ```
 
-By default, `visualise` uses the feature ID as fillcolour. 
-You can use quick options to modify which aspect given object should be shown in the plot, for example to scale the `fillcol`our to the attribute `NWBIR74`.
+You can use quick options to scale the plot parameters to the arguments of the `geom` to modify which aspects of and object should be shown in the plot, for example when scaling `fillcol` to the attribute `NWBIR74`.
 
 ```{r, fig.height=3}
 myAttr <- "NWBIR74"
@@ -126,14 +128,12 @@ visualise(!!paste0("NC - ", myAttr) := nc_geom, fillcol = !!myAttr)
 Each `geom` has the slot `@window`, which contains a reference window. This reference window can be used or modified in many functions of `geometr`
 
 ```{r, fig.height=3.5}
-visualise(`Currituck` = currituck, window = getExtent(currituck))
+visualise(`Currituck` = currituck, linecol = "fid")
 ```
 
 Finally, cast a `geom` to another type simply by providing it in `anchor` of the respective type
 
 ```{r, fig.height=3.5}
-library(magrittr)
-boundPoints <- gs_point(anchor = currituck) %>% 
-   setWindow(to = getExtent(.))
-visualise(`Currituck - boundary vertices`= boundPoints, linecol = fid)
+boundPoints <- gs_point(anchor = currituck)
+visualise(`Currituck - boundary vertices`= boundPoints, linecol = "fid")
 ```
